@@ -1,12 +1,12 @@
 INSERT INTO `block` VALUES ({SGL_NEXT_ID}, 'User_Block_Login', 'Login', '', '', 5, 'Right', 1, 0, 'N;');
 INSERT INTO `block` VALUES ({SGL_NEXT_ID}, 'Default_Block_Sample1', 'Community', '', '', 7, 'Right', 1, 1, 'N;');
 INSERT INTO `block` VALUES ({SGL_NEXT_ID}, 'Default_Block_Sample2', 'Syndication', '', '', 3, 'Left', 1, 1, 'N;');
-INSERT INTO `block` VALUES ({SGL_NEXT_ID}, 'Export_Block_SampleRss', 'Latest Seagull News', '', '', 2, 'Left', 1, 1, 'N;');
+INSERT INTO `block` VALUES ({SGL_NEXT_ID}, 'Export_Block_ShowRss', 'Latest Seagull News', '', '', 2, 'Left', 1, 1, 'a:2:{s:9:"rssSource";s:37:"http://seagullproject.org/export/rss/";s:11:"itemsToShow";s:1:"5";}');
 
 SELECT @blockIdLogin := block_id FROM block WHERE name = 'User_Block_Login';
 SELECT @blockIdSample1 := block_id FROM block WHERE name = 'Default_Block_Sample1';
 SELECT @blockIdSample2 := block_id FROM block WHERE name = 'Default_Block_Sample2';
-SELECT @blockIdSampleRss := block_id FROM block WHERE name = 'Export_Block_SampleRss';
+SELECT @blockIdSampleRss := block_id FROM block WHERE name = 'Export_Block_ShowRss';
 
 INSERT INTO `block_assignment` VALUES (@blockIdLogin, 0);
 INSERT INTO `block_assignment` VALUES (@blockIdSample1, 0);
